RESOLVED FIXED 250196
Canvases painted into CG display list image buffers don't ever update
https://bugs.webkit.org/show_bug.cgi?id=250196
Summary Canvases painted into CG display list image buffers don't ever update
Tim Horton
Reported 2023-01-06 00:25:22 PST
Canvases painted into CG display list image buffers don't ever update
Attachments
Tim Horton
Comment 1 2023-01-06 00:25:29 PST
Tim Horton
Comment 2 2023-01-06 00:37:32 PST
EWS
Comment 3 2023-01-06 17:26:18 PST
Committed 258586@main (7d40f6d46408): <https://commits.webkit.org/258586@main> Reviewed commits have been landed. Closing PR #8291 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.