Source/WebCore/platform/graphics/BifurcatedGraphicsContext.cpp
@@ -340,6 +340,11 @@ void BifurcatedGraphicsContext::drawNativeImage(NativeImage& nativeImage, const 
     VERIFY_STATE_SYNCHRONIZATION();
 }
 
+bool BifurcatedGraphicsContext::needsCachedNativeImageInvalidationWorkaround(RenderingMode renderingMode)
+{
+    return m_primaryContext.needsCachedNativeImageInvalidationWorkaround(renderingMode) || m_secondaryContext.needsCachedNativeImageInvalidationWorkaround(renderingMode);
+}
+
 void BifurcatedGraphicsContext::drawSystemImage(SystemImage& systemImage, const FloatRect& destinationRect)
 {
     m_primaryContext.drawSystemImage(systemImage, destinationRect);
